samples/_failures_safe/1761206476_f00bfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea487d31.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ea487d31.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_ea487d31.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea487d31.c:160:13: error: expected declaration or statement at end of input
